@@ -1,3 +1,8 @@
+2004-05-07  Bastien Nocera  <hadess@hadess.net>
+
+	* src/sj-util.c: (mkdir_recursive): better error message when ripping
+	on a full disk (Closes: #140403)
+
 2004-05-04  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
